--- a/view/frontend/templates/headjs.phtml
+++ b/view/frontend/templates/headjs.phtml
@@ -6,7 +6,12 @@
 
 $_accessKey = $block->getAccessKey();
 $_enabled = $block->isWidgetEnabled();
+$_testMode = $block->getTestMode();
 ?>
 <?php if ($_enabled) : ?>
-    <script defer src="https://widget.mispay.co/v1/sdk.js?authorize=<?php echo $_accessKey ?>"></script>
+    <?php if ($_testMode) : ?>
+        <script defer src="https://widget-sandbox.mispay.co/v1/sdk.js?authorize=<?php echo $_accessKey ?>"></script>
+    <?php else : ?>
+        <script defer src="https://widget.mispay.co/v1/sdk.js?authorize=<?php echo $_accessKey ?>"></script>
+    <?php endif; ?>
 <?php endif; ?>
