--- a/view/frontend/web/template/payment/mispaymethod.html
+++ b/view/frontend/web/template/payment/mispaymethod.html
@@ -5,55 +5,73 @@
  */
 -->
 <div
-    class="payment-method"
-    data-bind="css: {'_active': (getCode() == isChecked())}"
+  class="payment-method"
+  data-bind="css: {'_active': (getCode() == isChecked())}, visible: isVisible()"
 >
-    <div class="payment-method-title field choice">
-        <img
-            data-bind="attr: {src: getPaymentAcceptanceMarkSrc(), style: isLogoVisible()}"
-            width="76"
-            class="payment-icon"
-        />
-        <input
-            type="radio"
-            name="payment[method]"
-            class="radio"
-            data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"
-        />
-        <label data-bind="attr: {'for': getCode()}" class="label"
-            ><span data-bind="text: getTitle()"></span
-        ></label>
+  <div class="payment-method-title field choice">
+    <div
+      style="
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        column-gap: 0.5em;
+        align-items: center;
+      "
+    >
+      <input
+        type="radio"
+        name="payment[method]"
+        class="radio"
+        data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"
+      />
+      <img
+        data-bind="attr: {src: getPaymentAcceptanceMarkSrc(), style: isLogoVisible()}"
+        width="76"
+        class="payment-icon"
+      />
+      <label
+        data-bind="attr: {'for': getCode()}"
+        style="flex-grow: 1"
+        class="label"
+      >
+        <span
+          style="font-weight: bold; display: block; margin-bottom: 0.2"
+          data-bind="text: getTitle()"
+        ></span>
+        <span data-bind="text: getDescription()"></span>
+      </label>
     </div>
-    <div class="payment-method-content">
-        <!-- ko foreach: getRegion('messages') -->
-        <!-- ko template: getTemplate() --><!-- /ko -->
-        <!--/ko-->
-        <div class="payment-method-billing-address">
-            <!-- ko foreach: $parent.getRegion(getBillingAddressFormName()) -->
-            <!-- ko template: getTemplate() --><!-- /ko -->
-            <!--/ko-->
-        </div>
-        <div class="checkout-agreements-block">
-            <!-- ko foreach: $parent.getRegion('before-place-order') -->
-            <!-- ko template: getTemplate() --><!-- /ko -->
-            <!--/ko-->
-        </div>
-        <div class="actions-toolbar">
-            <div class="primary">
-                <button
-                    class="action primary checkout"
-                    type="submit"
-                    data-bind="
+  </div>
+  <div class="payment-method-content">
+    <!-- ko foreach: getRegion('messages') -->
+    <!-- ko template: getTemplate() --><!-- /ko -->
+    <!--/ko-->
+    <div class="payment-method-billing-address">
+      <!-- ko foreach: $parent.getRegion(getBillingAddressFormName()) -->
+      <!-- ko template: getTemplate() --><!-- /ko -->
+      <!--/ko-->
+    </div>
+    <div class="checkout-agreements-block">
+      <!-- ko foreach: $parent.getRegion('before-place-order') -->
+      <!-- ko template: getTemplate() --><!-- /ko -->
+      <!--/ko-->
+    </div>
+    <div class="actions-toolbar">
+      <div class="primary">
+        <button
+          class="action primary checkout"
+          type="submit"
+          data-bind="
                         click: placeOrder,
                         attr: {title: $t('Place Order')},
                         css: {disabled: !isPlaceOrderActionAllowed()},
                         enable: (getCode() == isChecked())
                         "
-                    disabled
-                >
-                    <span data-bind="i18n: 'Place Order'"></span>
-                </button>
-            </div>
-        </div>
+          disabled
+        >
+          <span data-bind="i18n: 'Place Order'"></span>
+        </button>
+      </div>
     </div>
+  </div>
 </div>
