Widget visibility limits, cart widget implementation

--- a/view/frontend/templates/catalog/mispay_widget.phtml
+++ b/view/frontend/templates/catalog/mispay_widget.phtml
@@ -6,10 +6,9 @@
 
 $_price = $block->getPrice();
 $_lang = $block->getLang();
-$_enabled = $block->isWidgetEnabled();
 ?>
 
-<?php if ($_enabled) : ?>
+<?php if ($block->isVisible()) : ?>
     <div class="">
         <mispay-widget amount="<?php echo $_price ?>" lang="<?php echo $_lang ?>"></mispay-widget>
     </div>
