--- a/view/frontend/templates/headjs.phtml
+++ b/view/frontend/templates/headjs.phtml
@@ -10,7 +10,7 @@ $_testMode = $block->getTestMode();
 ?>
 <?php if ($_enabled) : ?>
     <?php if ($_testMode) : ?>
-        <script defer src="https://widget.sandbox.mispay.co/v1/sdk.js?authorize=<?php echo $_accessKey ?>"></script>
+        <script defer src="https://widget.mispay.co/sandbox/v1/sdk.js?authorize=<?php echo $_accessKey ?>"></script>
     <?php else : ?>
         <script defer src="https://widget.mispay.co/v1/sdk.js?authorize=<?php echo $_accessKey ?>"></script>
     <?php endif; ?>
